# netspeed

./: .gitignore  Cargo.toml  README.md  make_debian_package.sh  netspeed.1  netspeed.desktop
libnetspeed/: Cargo.toml
libnetspeed/src/: lib.rs
src/: main.rs
ui/: Cargo.toml
ui/src/: cli.rs  lib.rs  main.rs
