[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnetspeed = { path = "../libnetspeed" }
log = "0.4.20"
anyhow = { version = "1.0.75", features = ["backtrace"] }
simplelog = { version = "^0.12.1", features = ["paris"] }
dirs = "5.0.1"
clap = { version = "4.3.0", features = ["derive"] }
eframe = "0.23.0"
egui = "0.23.0"
